added simple logical for using hetsys laptop

--- a/reproducible_result.ipynb
+++ b/reproducible_result.ipynb
@@ -58,6 +58,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Logical flag to state whether you are running on hetsys laptop (True) or hetmathsys node (False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hetsys_laptop = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# EPOCH simulation set-up\n",
     "\n",
     "EPOCH requires you to specify an output directory which stores the input file to set up the simulation and store the output files. The python function below is used to create a directory within epoch_surra and populate it with one of the example input decks in the input_decks directory."
@@ -65,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +115,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data_epoch directory already exists\n",
+      "Data_epoch/Data_1 directory already exists\n",
+      "created directory Data_epoch/Data_1 and input.deck\n",
+      "Data_epoch directory already exists\n",
+      "Data_epoch/Data_2 directory already exists\n",
+      "created directory Data_epoch/Data_2 and input.deck\n",
+      "Data_epoch directory already exists\n",
+      "Data_epoch/Data_3 directory already exists\n",
+      "created directory Data_epoch/Data_3 and input.deck\n",
+      "Data_epoch directory already exists\n",
+      "Data_epoch/Data_4 directory already exists\n",
+      "created directory Data_epoch/Data_4 and input.deck\n",
+      "Data_epoch directory already exists\n",
+      "Data_epoch/Data_5 directory already exists\n",
+      "created directory Data_epoch/Data_5 and input.deck\n",
+      "Data_epoch directory already exists\n",
+      "Data_epoch/Data_6 directory already exists\n",
+      "created directory Data_epoch/Data_6 and input.deck\n",
+      "Data_epoch directory already exists\n",
+      "Data_epoch/Data_7 directory already exists\n",
+      "created directory Data_epoch/Data_7 and input.deck\n",
+      "Data_epoch directory already exists\n",
+      "Data_epoch/Data_8 directory already exists\n",
+      "created directory Data_epoch/Data_8 and input.deck\n",
+      "Data_epoch directory already exists\n",
+      "Data_epoch/Data_9 directory already exists\n",
+      "created directory Data_epoch/Data_9 and input.deck\n",
+      "Data_epoch directory already exists\n",
+      "Data_epoch/Data_10 directory already exists\n",
+      "created directory Data_epoch/Data_10 and input.deck\n"
+     ]
+    }
+   ],
    "source": [
     "nfiles = len(glob.glob('Data_epoch/Data_1/fields*.sdf'))\n",
     "\n",
@@ -115,22 +168,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run all sub-directories at the same time using three processors each (30 in total)"
+    "##### Run all sub-directories at the same time using three processors each (30 in total) (hetmathsys node)\n",
+    "\n",
+    "##### Or run each one after the other using three processors each time (hetsys laptop)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output Directory exists at Data_epoch/Data_1\n",
+      "running epoch1d for I = 3000000000000000.0 W/cm^2 ; Ln = 0.0005 m ; PPC = 100.0 ; dir = Data_epoch/Data_1\n",
+      "Data_epoch/Data_1 Simulation Complete in 0.18099234501520792 minutes\n",
+      "Output Directory exists at Data_epoch/Data_2\n",
+      "running epoch1d for I = 3000000000000000.0 W/cm^2 ; Ln = 0.0005 m ; PPC = 100.0 ; dir = Data_epoch/Data_2\n"
+     ]
+    }
+   ],
    "source": [
+    "# use multiprocessing library to run epoch samples similtaneously\n",
     "def run_epoch_in_parrallel():\n",
     "      pool = Pool(processes=len(dirs))\n",
     "      pool.map(run_epoch, dirs)\n",
     "\n",
-    "\n",
+    "# condition to simply avoid running again once data has been collected\n",
     "if nfiles < timesteps:\n",
-    "    run_epoch_in_parrallel()"
+    "    # condition for running on hetsys laptop\n",
+    "    if hetsys_laptop:\n",
+    "        for d in dirs:\n",
+    "              run_epoch(d, output = False, npro = 3)\n",
+    "    # condition for running on hetmathsys\n",
+    "    else:\n",
+    "        run_epoch_in_parrallel()"
    ]
   },
   {
@@ -172,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
