added simple logical for using hetsys laptop

--- a/reproducible_result.ipynb
+++ b/reproducible_result.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,12 +58,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Logical flag to state whether you are running on hetsys laptop (True) or hetmathsys node (False)"
+    "### Logical flag to state whether you are running on hetsys laptop (True) or hetmathsys node (False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,46 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data_epoch directory already exists\n",
-      "Data_epoch/Data_1 directory already exists\n",
-      "created directory Data_epoch/Data_1 and input.deck\n",
-      "Data_epoch directory already exists\n",
-      "Data_epoch/Data_2 directory already exists\n",
-      "created directory Data_epoch/Data_2 and input.deck\n",
-      "Data_epoch directory already exists\n",
-      "Data_epoch/Data_3 directory already exists\n",
-      "created directory Data_epoch/Data_3 and input.deck\n",
-      "Data_epoch directory already exists\n",
-      "Data_epoch/Data_4 directory already exists\n",
-      "created directory Data_epoch/Data_4 and input.deck\n",
-      "Data_epoch directory already exists\n",
-      "Data_epoch/Data_5 directory already exists\n",
-      "created directory Data_epoch/Data_5 and input.deck\n",
-      "Data_epoch directory already exists\n",
-      "Data_epoch/Data_6 directory already exists\n",
-      "created directory Data_epoch/Data_6 and input.deck\n",
-      "Data_epoch directory already exists\n",
-      "Data_epoch/Data_7 directory already exists\n",
-      "created directory Data_epoch/Data_7 and input.deck\n",
-      "Data_epoch directory already exists\n",
-      "Data_epoch/Data_8 directory already exists\n",
-      "created directory Data_epoch/Data_8 and input.deck\n",
-      "Data_epoch directory already exists\n",
-      "Data_epoch/Data_9 directory already exists\n",
-      "created directory Data_epoch/Data_9 and input.deck\n",
-      "Data_epoch directory already exists\n",
-      "Data_epoch/Data_10 directory already exists\n",
-      "created directory Data_epoch/Data_10 and input.deck\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nfiles = len(glob.glob('Data_epoch/Data_1/fields*.sdf'))\n",
     "\n",
@@ -168,28 +131,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Run all sub-directories at the same time using three processors each (30 in total) (hetmathsys node)\n",
+    "### Run all sub-directories at the same time using three processors each (30 in total) (hetmathsys node)\n",
     "\n",
-    "##### Or run each one after the other using three processors each time (hetsys laptop)"
+    "### Or run each one after the other using three processors each time (hetsys laptop)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Output Directory exists at Data_epoch/Data_1\n",
-      "running epoch1d for I = 3000000000000000.0 W/cm^2 ; Ln = 0.0005 m ; PPC = 100.0 ; dir = Data_epoch/Data_1\n",
-      "Data_epoch/Data_1 Simulation Complete in 0.18099234501520792 minutes\n",
-      "Output Directory exists at Data_epoch/Data_2\n",
-      "running epoch1d for I = 3000000000000000.0 W/cm^2 ; Ln = 0.0005 m ; PPC = 100.0 ; dir = Data_epoch/Data_2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use multiprocessing library to run epoch samples similtaneously\n",
     "def run_epoch_in_parrallel():\n",
